src/objects/DoDEA_Serious_Incident_Report__c.object
<CustomObject>
    <description>Used to support field services, inspections, and field data collection use cases around event and incident reporting.</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crime_Against_Persons__c</fullName>
        <label>Crime Against Persons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Battery</fullName>
                </value>
                <value>
                    <fullName>Assault with a Deadly Weapon</fullName>
                </value>
                <value>
                    <fullName>Homicide</fullName>
                </value>
                <value>
                    <fullName>Robbery/Extortion</fullName>
                </value>
                <value>
                    <fullName>Sex Offenses</fullName>
                </value>
                <value>
                    <fullName>&quot;Other&quot; Crimes Against Persons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crimes_Against_Property__c</fullName>
        <label>Crimes Against Property</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Property Theft(over $100 loss)</fullName>
                </value>
                <value>
                    <fullName>Govt. Accountable Property Theft</fullName>
                </value>
                <value>
                    <fullName>Vandalism (over $500 loss)</fullName>
                </value>
                <value>
                    <fullName>Graffiti (over $500 loss)</fullName>
                </value>
                <value>
                    <fullName>Arson</fullName>
                </value>
                <value>
                    <fullName>Burglary</fullName>
                </value>
                <value>
                    <fullName>&quot;Other&quot; Crimes Against Property</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_and_Time__c</fullName>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Describe_in_Detail_What_Occurred__c</fullName>
        <label>Describe in Detail What Occurred.</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <label>District Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Alcohol_Offenses__c</fullName>
        <label>Drug/Alcohol Offenses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use of Drugs/Alcohol</fullName>
                </value>
                <value>
                    <fullName>Possession of Drugs</fullName>
                </value>
                <value>
                    <fullName>Possession of Alcohol</fullName>
                </value>
                <value>
                    <fullName>Possession of Drug paraphernalia</fullName>
                </value>
                <value>
                    <fullName>Possession of of Drugs/Alcohol for Sale</fullName>
                </value>
                <value>
                    <fullName>Sale and/or Furnishing of Drugs/Alcohol</fullName>
                </value>
                <value>
                    <fullName>&quot;Other&quot; Drug/Alcohol Offenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Occured__c</fullName>
        <label>Incident Occured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On School Grounds</fullName>
                </value>
                <value>
                    <fullName>Off school Grounds(Enroute to or from school or white ata school sponsored activity)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Report_Participants2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Report Participants2</label>
        <referenceTo>Incident_Report_Participants__c</referenceTo>
        <relationshipName>DoDEA_Serious_Incident_Report1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Report_Participants3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Report Participants3</label>
        <referenceTo>Incident_Report_Participants__c</referenceTo>
        <relationshipName>DoDEA_Serious_Incident_Report2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Report_Participants4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Report Participants4</label>
        <referenceTo>Incident_Report_Participants__c</referenceTo>
        <relationshipName>DoDEA_Serious_Incident_Report3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <label>Notification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Police</fullName>
                </value>
                <value>
                    <fullName>District</fullName>
                </value>
                <value>
                    <fullName>Area</fullName>
                </value>
                <value>
                    <fullName>HQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notifications_made_coordinated_by__c</fullName>
        <label>Notifications made/coordinated by:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Incidents__c</fullName>
        <label>Other Incidents</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Destructive/Explosive Devices</fullName>
                </value>
                <value>
                    <fullName>Loitering/Trespassing</fullName>
                </value>
                <value>
                    <fullName>Possession of an Actual Firearm</fullName>
                </value>
                <value>
                    <fullName>Possession of &quot;Other&quot; Weapon</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Police_Investigating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Police Investigating?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Police_Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Police Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Threats_Help__c</fullName>
        <inlineHelpText>Force Protection issues i.e., suspected surveillance or other suspicious or actual activity constituting a threat or potential threat to students, staff, or operations. 
Threats of Extreme Violence i.e., written,verbal,internal or external, by students o</inlineHelpText>
        <label>Security Threats Help</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Threats__c</fullName>
        <inlineHelpText>Force  Protection issues i.e., suspected surveillance or other suspicious or actual activity constituting a threat or potential threat to students, staff, or operations.
Threats of Extreme Violence  i.e., written,verbal,internal or external, by students.</inlineHelpText>
        <label>Security Threats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bomb Threat</fullName>
                </value>
                <value>
                    <fullName>Force protection issues</fullName>
                </value>
                <value>
                    <fullName>Threats of Extreme Violence</fullName>
                </value>
                <value>
                    <fullName>&quot;Other&quot; Security Threats</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Serious Incident Report</label>
    <nameField>
        <label>DoDEA SERIOUS INCIDENT REPORT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DoDEA Serious Incident Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>